resolved whitespace issue

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 
 .view-container {
   display: flex;
-  flex-flow: wrap;
+  flex-flow: column;
   width: 100%;
   position: relative;
   height: 100%;
@@ -76,7 +76,7 @@
     margin-left: -50%;
   }
   .rde-sidebar.active ~ .view-container .cards-container .rde-cards-container{
-    width: 33.3%;
+    width: 33.33%;
   }
 }
 
@@ -85,13 +85,13 @@
     font-size: 100%;
   }
   .rde-cards-container {
-    width: 33.3%;
+    width: 33.33%;
   }
   .rde-sidebar {
-    width: 33.3%;
+    width: 33.33%;
   }
   .rde-sidebar.active{
-    margin-left: -33.3%;
+    margin-left: -33.33%;
   }
   .rde-sidebar.active ~ .view-container .cards-container .rde-cards-container{
     width: 25%;
@@ -112,6 +112,6 @@
     margin-left: -20%;
   }
   .rde-sidebar.active ~ .view-container .cards-container .rde-cards-container{
-    width: 16.6%;
+    width: 16.66%;
   }
 }
